--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "http://sannatkumar.github.io/transparency_nepal",
+  "home": "https://sannatkumar.github.io/transparency_nepal",
   "name": "transparency_nepal",
   "version": "0.1.0",
   "private": true,
