--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://sannatkumar.github.io/transparency_nepal",
+  //"home": "https://sannatkumar.github.io/transparency_nepal",
   "name": "transparency_nepal",
   "version": "0.1.0",
   "private": true,
@@ -19,8 +19,8 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    //"predeploy":"npm run build",
+    //"deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
